--- a/public/css/character.css
+++ b/public/css/character.css
@@ -2,7 +2,7 @@
 
 :root {
     /* Palette */
-    --black-solid:#1A1A1A;
+    --black-solid:#000000;
     --light-black:#1E1E20;
     --dark-gray:#313234;
     --blue-solid:#11B0C8;
@@ -51,22 +51,6 @@ a {
     color: inherit;
     font-family: inherit;
 }
-h1 {
-    font-weight: 700;
-    font-size: var(--font-display);
-}
-h2 {
-    font-weight: 400;
-    font-size: var(--font-jumbo);
-}
-h3 {
-    font-weight: 700;
-    font-size: var(--font-large);
-}
-h4 {
-    font-weight: 400;
-    font-size: var(--font-medium);
-}
 p {
     font-weight: 400;
     font-size: var(--font-small);
@@ -77,4 +61,81 @@ img {
 .container {
     max-width: 120rem;
     margin: 0 auto;
+}
+.btn {
+    border-style: none;
+    padding: var(--spacing-8) var(--spacing-16) var(--spacing-8) var(--spacing-8);
+    background-color: var(--blue-solid);
+    border-radius: 32px;
+    color: var(--white-solid);
+    font-size: var(--font-small);
+    font-weight: 400;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: var(--spacing-8);
+}
+.btn__icon {
+    display: flex;
+    font-size: var(--spacing-24);
+}
+
+/**
+* Estilos para el header
+*/
+.header {
+    background-color: var(--black-solid);
+    padding: var(--spacing-68) var(--spacing-68) 0;
+    display: flex;
+    flex-direction: column;
+    gap: var(--spacing-16);
+}
+.header__section {
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+.header__logo {
+    max-width: 200px;
+}
+.header__tittle {
+    font-weight: 700;
+    font-size: var(--font-jumbo);
+    margin: 0;
+}
+.header__tittle--span {
+    font-size: 48px;
+    display: block;
+    color: var(--blue-solid);
+}
+.header__btns {
+    display: flex;
+    gap: var(--spacing-16);
+}
+
+/**
+* Dark-theme & Light-theme
+*/
+.dark-theme {
+
+}
+.light-theme {
+    display: none;
+}
+
+/**
+* Estilos para el footer
+*/
+.footer {
+    padding: var(--spacing-68);
+}
+.footer__section {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    border-top: 2px solid var(--white-solid);
+}
+.footer__text {
+    padding-top: var(--spacing-24);
 }
